{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 32,
  "lineage": "24ecad6b-fd82-6059-4873-497a81b34c2e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04eed88b1a6b28477",
            "arn": "arn:aws:ec2:us-west-2:368276953847:instance/i-064cdc08c64d900e6",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064cdc08c64d900e6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "count_dyn_inv_demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b591a6a38365de43",
            "private_dns": "ip-172-16-0-69.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.0.69",
            "public_dns": "ec2-54-190-194-77.us-west-2.compute.amazonaws.com",
            "public_ip": "54.190.194.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-026e69b8169fbd7e7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0fa0a3f75558765b5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0072f1bf6d04053d6",
            "tags": {
              "Name": "be-us-west-2a",
              "Project": "count_dyn_inv_demo",
              "Server_Role": "be"
            },
            "tags_all": {
              "Name": "be-us-west-2a",
              "Project": "count_dyn_inv_demo",
              "Server_Role": "be"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fa0a3f75558765b5"
            ]
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.main",
            "data.aws_ec2_instance_type_offering.main",
            "module.ssh_key.aws_key_pair.main",
            "module.ssh_key.data.local_file.ssh_pub_key",
            "module.ssh_key.terraform_data.ssh_key_pair"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04eed88b1a6b28477",
            "arn": "arn:aws:ec2:us-west-2:368276953847:instance/i-0a9e9a6e5e76216fe",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a9e9a6e5e76216fe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "count_dyn_inv_demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05869fce448486069",
            "private_dns": "ip-172-16-1-178.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.178",
            "public_dns": "ec2-35-90-207-187.us-west-2.compute.amazonaws.com",
            "public_ip": "35.90.207.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05d9dd11471590f18",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0fa0a3f75558765b5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0155d6cafecb20c9f",
            "tags": {
              "Name": "be-us-west-2b",
              "Project": "count_dyn_inv_demo",
              "Server_Role": "be"
            },
            "tags_all": {
              "Name": "be-us-west-2b",
              "Project": "count_dyn_inv_demo",
              "Server_Role": "be"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fa0a3f75558765b5"
            ]
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.main",
            "data.aws_ec2_instance_type_offering.main",
            "module.ssh_key.aws_key_pair.main",
            "module.ssh_key.data.local_file.ssh_pub_key",
            "module.ssh_key.terraform_data.ssh_key_pair"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04eed88b1a6b28477",
            "arn": "arn:aws:ec2:us-west-2:368276953847:instance/i-0133ab21e8c15e7f3",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0133ab21e8c15e7f3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "count_dyn_inv_demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08c859e6f19184552",
            "private_dns": "ip-172-16-2-72.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.2.72",
            "public_dns": "ec2-35-93-59-110.us-west-2.compute.amazonaws.com",
            "public_ip": "35.93.59.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d0d39059816d1004",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0fa0a3f75558765b5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0950dd7d1ab4eae7f",
            "tags": {
              "Name": "be-us-west-2c",
              "Project": "count_dyn_inv_demo",
              "Server_Role": "be"
            },
            "tags_all": {
              "Name": "be-us-west-2c",
              "Project": "count_dyn_inv_demo",
              "Server_Role": "be"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fa0a3f75558765b5"
            ]
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.main",
            "data.aws_ec2_instance_type_offering.main",
            "module.ssh_key.aws_key_pair.main",
            "module.ssh_key.data.local_file.ssh_pub_key",
            "module.ssh_key.terraform_data.ssh_key_pair"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04eed88b1a6b28477",
            "arn": "arn:aws:ec2:us-west-2:368276953847:instance/i-0e2f769357bda628a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e2f769357bda628a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "count_dyn_inv_demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e8b33eceeec9f692",
            "private_dns": "ip-172-16-0-121.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.0.121",
            "public_dns": "ec2-35-87-72-9.us-west-2.compute.amazonaws.com",
            "public_ip": "35.87.72.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02118f32a3dad2488",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0fa0a3f75558765b5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0072f1bf6d04053d6",
            "tags": {
              "Name": "db-us-west-2a",
              "Project": "count_dyn_inv_demo",
              "Server_Role": "db"
            },
            "tags_all": {
              "Name": "db-us-west-2a",
              "Project": "count_dyn_inv_demo",
              "Server_Role": "db"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fa0a3f75558765b5"
            ]
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.main",
            "data.aws_ec2_instance_type_offering.main",
            "module.ssh_key.aws_key_pair.main",
            "module.ssh_key.data.local_file.ssh_pub_key",
            "module.ssh_key.terraform_data.ssh_key_pair"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04eed88b1a6b28477",
            "arn": "arn:aws:ec2:us-west-2:368276953847:instance/i-07571749ef7ce0f23",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07571749ef7ce0f23",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "count_dyn_inv_demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a20f2067c404d192",
            "private_dns": "ip-172-16-1-232.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.232",
            "public_dns": "ec2-35-92-204-228.us-west-2.compute.amazonaws.com",
            "public_ip": "35.92.204.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02548f34d13c99073",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0fa0a3f75558765b5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0155d6cafecb20c9f",
            "tags": {
              "Name": "db-us-west-2b",
              "Project": "count_dyn_inv_demo",
              "Server_Role": "db"
            },
            "tags_all": {
              "Name": "db-us-west-2b",
              "Project": "count_dyn_inv_demo",
              "Server_Role": "db"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fa0a3f75558765b5"
            ]
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.main",
            "data.aws_ec2_instance_type_offering.main",
            "module.ssh_key.aws_key_pair.main",
            "module.ssh_key.data.local_file.ssh_pub_key",
            "module.ssh_key.terraform_data.ssh_key_pair"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04eed88b1a6b28477",
            "arn": "arn:aws:ec2:us-west-2:368276953847:instance/i-0a45fa62ed022b714",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a45fa62ed022b714",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "count_dyn_inv_demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-051e680f304310bab",
            "private_dns": "ip-172-16-2-145.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.2.145",
            "public_dns": "ec2-54-244-43-252.us-west-2.compute.amazonaws.com",
            "public_ip": "54.244.43.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0181f641d2e21e373",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0fa0a3f75558765b5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0950dd7d1ab4eae7f",
            "tags": {
              "Name": "db-us-west-2c",
              "Project": "count_dyn_inv_demo",
              "Server_Role": "db"
            },
            "tags_all": {
              "Name": "db-us-west-2c",
              "Project": "count_dyn_inv_demo",
              "Server_Role": "db"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fa0a3f75558765b5"
            ]
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.main",
            "data.aws_ec2_instance_type_offering.main",
            "module.ssh_key.aws_key_pair.main",
            "module.ssh_key.data.local_file.ssh_pub_key",
            "module.ssh_key.terraform_data.ssh_key_pair"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04eed88b1a6b28477",
            "arn": "arn:aws:ec2:us-west-2:368276953847:instance/i-0655e9d33b56c04b0",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0655e9d33b56c04b0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "count_dyn_inv_demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0801ade6da967bf1d",
            "private_dns": "ip-172-16-0-184.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.0.184",
            "public_dns": "ec2-52-33-108-45.us-west-2.compute.amazonaws.com",
            "public_ip": "52.33.108.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0151899f81cffbe06",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0fa0a3f75558765b5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0072f1bf6d04053d6",
            "tags": {
              "Name": "web-us-west-2a",
              "Project": "count_dyn_inv_demo",
              "Server_Role": "web"
            },
            "tags_all": {
              "Name": "web-us-west-2a",
              "Project": "count_dyn_inv_demo",
              "Server_Role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fa0a3f75558765b5"
            ]
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.main",
            "data.aws_ec2_instance_type_offering.main",
            "module.ssh_key.aws_key_pair.main",
            "module.ssh_key.data.local_file.ssh_pub_key",
            "module.ssh_key.terraform_data.ssh_key_pair"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04eed88b1a6b28477",
            "arn": "arn:aws:ec2:us-west-2:368276953847:instance/i-085379f5cb1c7d892",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085379f5cb1c7d892",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "count_dyn_inv_demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09e46743b90e48c3b",
            "private_dns": "ip-172-16-1-17.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.17",
            "public_dns": "ec2-34-219-181-10.us-west-2.compute.amazonaws.com",
            "public_ip": "34.219.181.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c0fef658630d53c6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0fa0a3f75558765b5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0155d6cafecb20c9f",
            "tags": {
              "Name": "web-us-west-2b",
              "Project": "count_dyn_inv_demo",
              "Server_Role": "web"
            },
            "tags_all": {
              "Name": "web-us-west-2b",
              "Project": "count_dyn_inv_demo",
              "Server_Role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fa0a3f75558765b5"
            ]
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.main",
            "data.aws_ec2_instance_type_offering.main",
            "module.ssh_key.aws_key_pair.main",
            "module.ssh_key.data.local_file.ssh_pub_key",
            "module.ssh_key.terraform_data.ssh_key_pair"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04eed88b1a6b28477",
            "arn": "arn:aws:ec2:us-west-2:368276953847:instance/i-0bacd313dd0787dab",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bacd313dd0787dab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "count_dyn_inv_demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-086a9d883b187acb3",
            "private_dns": "ip-172-16-2-147.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.2.147",
            "public_dns": "ec2-34-211-170-57.us-west-2.compute.amazonaws.com",
            "public_ip": "34.211.170.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02df2b40d290409d3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0fa0a3f75558765b5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0950dd7d1ab4eae7f",
            "tags": {
              "Name": "web-us-west-2c",
              "Project": "count_dyn_inv_demo",
              "Server_Role": "web"
            },
            "tags_all": {
              "Name": "web-us-west-2c",
              "Project": "count_dyn_inv_demo",
              "Server_Role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fa0a3f75558765b5"
            ]
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.main",
            "data.aws_ec2_instance_type_offering.main",
            "module.ssh_key.aws_key_pair.main",
            "module.ssh_key.data.local_file.ssh_pub_key",
            "module.ssh_key.terraform_data.ssh_key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:368276953847:internet-gateway/igw-0cccd1a46ba78c947",
            "id": "igw-0cccd1a46ba78c947",
            "owner_id": "368276953847",
            "tags": {
              "Name": "count_dyn_inv_demo",
              "Project": "count_dyn_inv_demo"
            },
            "tags_all": {
              "Name": "count_dyn_inv_demo",
              "Project": "count_dyn_inv_demo"
            },
            "vpc_id": "vpc-046b0e3488630218c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:368276953847:route-table/rtb-0a59a8963f7f833f4",
            "id": "rtb-0a59a8963f7f833f4",
            "owner_id": "368276953847",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cccd1a46ba78c947",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "count_dyn_inv_demo",
              "Project": "count_dyn_inv_demo"
            },
            "tags_all": {
              "Name": "count_dyn_inv_demo",
              "Project": "count_dyn_inv_demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-046b0e3488630218c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0032160a52fe0120f",
            "route_table_id": "rtb-0a59a8963f7f833f4",
            "subnet_id": "subnet-0072f1bf6d04053d6"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_availability_zones.main",
            "data.aws_ec2_instance_type_offering.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069c8eb08c4003b02",
            "route_table_id": "rtb-0a59a8963f7f833f4",
            "subnet_id": "subnet-0155d6cafecb20c9f"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_availability_zones.main",
            "data.aws_ec2_instance_type_offering.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b34e423403cb8269",
            "route_table_id": "rtb-0a59a8963f7f833f4",
            "subnet_id": "subnet-0950dd7d1ab4eae7f"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_availability_zones.main",
            "data.aws_ec2_instance_type_offering.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:368276953847:security-group/sg-0fa0a3f75558765b5",
            "description": "Allows ssh, web, and intra-vpc ingress access and all egress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa0a3f75558765b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "142.232.0.0/16"
                ],
                "description": "ssh access from bcit",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "142.232.0.0/16"
                ],
                "description": "web access from bcit",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "internal access within the vpc",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "75.157.0.0/16"
                ],
                "description": "ssh access from home",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "75.157.0.0/16"
                ],
                "description": "web access from home",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_count_dyn_inv",
            "name_prefix": "",
            "owner_id": "368276953847",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "count_dyn_inv_demo_sg_count_dyn_inv",
              "Project": "count_dyn_inv_demo"
            },
            "tags_all": {
              "Name": "count_dyn_inv_demo_sg_count_dyn_inv",
              "Project": "count_dyn_inv_demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-046b0e3488630218c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:368276953847:subnet/subnet-0072f1bf6d04053d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0072f1bf6d04053d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "368276953847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "count_dyn_inv_demo_us-west-2a",
              "Project": "count_dyn_inv_demo"
            },
            "tags_all": {
              "Name": "count_dyn_inv_demo_us-west-2a",
              "Project": "count_dyn_inv_demo"
            },
            "vpc_id": "vpc-046b0e3488630218c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.main",
            "data.aws_ec2_instance_type_offering.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:368276953847:subnet/subnet-0155d6cafecb20c9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0155d6cafecb20c9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "368276953847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "count_dyn_inv_demo_us-west-2b",
              "Project": "count_dyn_inv_demo"
            },
            "tags_all": {
              "Name": "count_dyn_inv_demo_us-west-2b",
              "Project": "count_dyn_inv_demo"
            },
            "vpc_id": "vpc-046b0e3488630218c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.main",
            "data.aws_ec2_instance_type_offering.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:368276953847:subnet/subnet-0950dd7d1ab4eae7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0950dd7d1ab4eae7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "368276953847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "count_dyn_inv_demo_us-west-2c",
              "Project": "count_dyn_inv_demo"
            },
            "tags_all": {
              "Name": "count_dyn_inv_demo_us-west-2c",
              "Project": "count_dyn_inv_demo"
            },
            "vpc_id": "vpc-046b0e3488630218c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.main",
            "data.aws_ec2_instance_type_offering.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:368276953847:vpc/vpc-046b0e3488630218c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-087adb5665976510e",
            "default_route_table_id": "rtb-05538927b676c2b4f",
            "default_security_group_id": "sg-08ac70d55fa83cb62",
            "dhcp_options_id": "dopt-00be7c90a52b57653",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-046b0e3488630218c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05538927b676c2b4f",
            "owner_id": "368276953847",
            "tags": {
              "Name": "count_dyn_inv_demo",
              "Project": "count_dyn_inv_demo"
            },
            "tags_all": {
              "Name": "count_dyn_inv_demo",
              "Project": "count_dyn_inv_demo"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "allow_all_egress",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:368276953847:security-group-rule/sgr-067edbd5465f0bc5c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "allow all egress traffic",
            "from_port": null,
            "id": "sgr-067edbd5465f0bc5c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fa0a3f75558765b5",
            "security_group_rule_id": "sgr-067edbd5465f0bc5c",
            "tags": {
              "Name": "count_dyn_inv_demo_allow_all_egress",
              "Project": "count_dyn_inv_demo"
            },
            "tags_all": {
              "Name": "count_dyn_inv_demo_allow_all_egress",
              "Project": "count_dyn_inv_demo"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "intra_vpc_access",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:368276953847:security-group-rule/sgr-0b459f3b394416720",
            "cidr_ipv4": "172.16.0.0/16",
            "cidr_ipv6": null,
            "description": "internal access within the vpc",
            "from_port": null,
            "id": "sgr-0b459f3b394416720",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fa0a3f75558765b5",
            "security_group_rule_id": "sgr-0b459f3b394416720",
            "tags": {
              "Name": "intra_vpc_access",
              "Project": "count_dyn_inv_demo"
            },
            "tags_all": {
              "Name": "intra_vpc_access",
              "Project": "count_dyn_inv_demo"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "ssh_access_bcit",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:368276953847:security-group-rule/sgr-0c4f4c355b5914016",
            "cidr_ipv4": "142.232.0.0/16",
            "cidr_ipv6": null,
            "description": "ssh access from bcit",
            "from_port": 22,
            "id": "sgr-0c4f4c355b5914016",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fa0a3f75558765b5",
            "security_group_rule_id": "sgr-0c4f4c355b5914016",
            "tags": {
              "Name": "ssh_access_bcit",
              "Project": "count_dyn_inv_demo"
            },
            "tags_all": {
              "Name": "ssh_access_bcit",
              "Project": "count_dyn_inv_demo"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "ssh_access_home",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:368276953847:security-group-rule/sgr-000d0f3bcba2b5d9e",
            "cidr_ipv4": "75.157.0.0/16",
            "cidr_ipv6": null,
            "description": "ssh access from home",
            "from_port": 22,
            "id": "sgr-000d0f3bcba2b5d9e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fa0a3f75558765b5",
            "security_group_rule_id": "sgr-000d0f3bcba2b5d9e",
            "tags": {
              "Name": "ssh_access_home",
              "Project": "count_dyn_inv_demo"
            },
            "tags_all": {
              "Name": "ssh_access_home",
              "Project": "count_dyn_inv_demo"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "web_access_bcit",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:368276953847:security-group-rule/sgr-0eccd4208b575c159",
            "cidr_ipv4": "142.232.0.0/16",
            "cidr_ipv6": null,
            "description": "web access from bcit",
            "from_port": 80,
            "id": "sgr-0eccd4208b575c159",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fa0a3f75558765b5",
            "security_group_rule_id": "sgr-0eccd4208b575c159",
            "tags": {
              "Name": "web_access_bcit",
              "Project": "count_dyn_inv_demo"
            },
            "tags_all": {
              "Name": "web_access_bcit",
              "Project": "count_dyn_inv_demo"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "web_access_home",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:368276953847:security-group-rule/sgr-0d39af765b3b658db",
            "cidr_ipv4": "75.157.0.0/16",
            "cidr_ipv6": null,
            "description": "web access from home",
            "from_port": 80,
            "id": "sgr-0d39af765b3b658db",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fa0a3f75558765b5",
            "security_group_rule_id": "sgr-0d39af765b3b658db",
            "tags": {
              "Name": "web_access_home",
              "Project": "count_dyn_inv_demo"
            },
            "tags_all": {
              "Name": "web_access_home",
              "Project": "count_dyn_inv_demo"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}